<resources>
    <string name="app_name">SmartDonkeysApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="password">password:</string>
    <string name="confirm_password">conferma password:</string>
    <string name="choose_username">scegli l\'username con cui gli altri ti vedranno online (scegli un nome di fantasia)</string>
    <string name="not_valid_username">l\'username che hia scelto non è valido</string>
    <string name="upload_photo">scegli un immagine del profilo con cui gli altri ti vedranno</string>
    <string name="confirm_registration">registrati adesso!</string>
    <string name="login">effettua il login</string>
    <string name="insert_email">inserisci la tua email (è la mail su cui riceverai i coupon acquistati, scegli una mail che utilizzi quotidianamente)</string>
    <string name="insert_password">scegli una password di almeno 7 caratteri alfanumerici</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="register">Registrati</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">campo richiesto</string>
    <string name="not_same_values">non corrispondono la email e la conferma dell\'email</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="success_login">"connessione effettuata con successo"</string>
    <string name="unsuccess_login">"credenziali invalide"</string>
    <string name="connection_error">"problemi di connessione...ci scusiamo per il disagio"</string>
    <string name="protocol_error">"errore nel protocollo di comunicazione, riavviare l'applicazione"</string>
</resources>
